--- a/src/app/components/listar-productos/listar-productos.component.scss
+++ b/src/app/components/listar-productos/listar-productos.component.scss
@@ -1,4 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
 .fa-solid {
     cursor: pointer;
     margin-left: 7px;
+}
+
+.titulo {
+    font-family: 'Bagel Fat One', cursive;
+}
+
+.card {
+    .card-body {
+        background-color: #f5f5;
+        border-radius: 10px;
+        border: 2px solid #fdfd96;
+    }
+}
+
+.card {
+    .card-body img:hover {
+        transition: 0.3s ease-in-out;
+        transform: scale(1.1);
+    }
+}
+
+.card {
+    #uno {
+        background-color: #84b6f4;
+    }
+}
+
+.card {
+    .card-header {
+        background-color: #f5f5;
+        border: 2px solid #fdfd96;
+    }
 }
