--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,22 +1,13 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="listas/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="crear-producto/">Link</a>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
+<header class="header">
+    <div class="logo">
+        <a class="uno" href="">Anime<span class="dos">Toon</span></a>
     </div>
-</nav>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="/listas">Listas</a></li>
+            <li><a href="/crear-producto">Crear una lista</a></li>
+        </ul>
+    </nav>
+    <a class="btn" href="/aboutus"><button>Acerca de nosotros</button></a>
+</header>
