--- a/src/app/components/listar-productos/listar-productos.component.html
+++ b/src/app/components/listar-productos/listar-productos.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="card-header">
                     <span class="titulo" style="text-align: center;">LISTADO DE MANGAS</span>
-                    <div class="btn btn-outline-success float-end" routerLink="/crear-producto">NUEVO</div>
+                    <div class="btn btn-outline-success float-end" routerLink="/crear-producto">AGREGAR</div>
                 </div>
                 <div class="card-body" id="uno">
                     <div class="row">
